# delivery_service

./: pyproject.toml
docker/: .dockerignore  .env.app  .env.make  Dockerfile  Makefile  docker-compose.local.yml  docker-compose.yml
migrations/: alembic.ini  env.py
migrations/versions/: v1.py
src/application/cli/: app.py
src/application/cli/controller/app/: command.py
src/application/web/: app.py
src/domain/: module.py
src/domain/company/command/delete_company/: command.py  handler.py
src/domain/company/command/save_company/: command.py  handler.py
src/domain/company/controller/rest/: base.py
src/domain/company/model/: __init__.py  company.py
src/domain/company/repository/: interface.py  repository.py
src/domain/order/command/delete_order/: command.py  handler.py
src/domain/order/command/save_order/: command.py  handler.py
src/domain/order/controller/rest/: base.py
src/domain/order/exception/: order_cant_be_created_due_to_company_doesnt_exist.py
src/domain/order/model/: __init__.py  order.py  order_customer.py  order_item.py  order_shipping.py
src/domain/order/repository/: interface.py  repository.py
src/settings/: config.py  module.py
src/shared/: module.py
src/shared/database/repository/: interface.py
src/shared/database/sqlalchemy/: mixins.py  repository.py
src/shared/fastapi_/exception/: factory.py
src/shared/message_bus/command_bus/: bus.py  exception.py
src/shared/message_bus/interface/: bus.py
src/shared/module_setup/: bootstrap.py
src/shared/pydantic_/enum_/: serializer.py  validator.py
(+23 files in other folders)
